# rilevamento-allegati-isab

./: .gitignore  MIGRATION_PLAN.md  README.md  SYNCROJOB_LICENSE_STANDARD_github(intelleo-licenses).md  app_logger.py  app_updater.py  config.json  config_manager.py  generate_architecture.py  generate_icon.py  infoLicense.txt  launch.bat  launch_debug.bat  license_updater.py  license_validator.py  log.txt  main.py  pdf_processor.py  pyproject.toml  release_patch.bat  release_patch_no_Deploy.bat  requirements.txt  restart.bat  roi_utility.py  tmp_diag.py  version.py
.Jules/: palette.md
Licenza/: manifest.json  pyarmor.rkey  validity.token
Log/: error_log.txt
admin/: admin_license_gui.py  build_dist.py  build_log.txt  bump_version.py  setup_script.iss
admin/Crea Licenze/: admin_license_gui.py
admin/Crea Setup/: build_dist.py  bump_version.py  setup_script.iss
admin/Crea Setup/hooks/: hook-tkinterdnd2.py
docs/prompts/: architecture_ai_blueprint.md
local_test_server/: version.json
prompt/: 1_QUALITY_STACK_INSTALL.md  2_QUALITY_STACK_CONFIG.md  3_REFACTORING_AUDIT.md  4_SECURITY_AUDIT.md  5_TESTING_STRATEGY.md  6_REFACTORING_EXECUTION.md  7_PYSIDE6_MIGRATION_PLAN.md  README.md
src/: app_launcher.py  app_logger.py  app_updater.py  config.json  config_manager.py  generate_icon.py  license_updater.py  license_validator.py  main.py  notification_manager.py  pdf_processor.py  requirements.txt  roi_utility.py  version.py
src/core/: __init__.py  analysis_service.py  app_controller.py  archive_service.py  classifier.py  file_service.py  notification_manager.py  ocr_engine.py  path_manager.py  pdf_manager.py  pdf_processor.py  pdf_splitter.py  processing_worker.py  roi_controller.py  roi_manager.py  rule_service.py  session_manager.py  tesseract_manager.py
src/gui/: __init__.py  animations.py  theme.py  ui_factory.py
src/gui/dialogs/: __init__.py  roi_selector_dialog.py  rule_editor.py  unknown_review.py
src/gui/tabs/: __init__.py  config_tab.py  dashboard_tab.py  help_tab.py  processing_tab.py
src/shared/: __init__.py  constants.py  security_utils.py
tests/: __init__.py  conftest.py  test_analysis_service.py  test_app_controller.py  test_app_launcher.py  test_app_logger.py  test_app_updater.py  test_config_manager.py  test_config_tab.py  test_dashboard_tab.py  test_license_updater.py  test_license_validator.py  test_main.py  test_notification_manager.py  test_ocr_engine.py  test_pdf_graphics_view.py  test_pdf_processor.py  test_pdf_splitter.py  test_processing_worker.py  test_roi_utility.py  test_rule_service.py  test_session_management.py  test_session_manager_core.py  test_splash_screen.py  test_ui_factory.py  test_unknown_review.py
tmp/: verify_pdf_loading.py
(+7 files in other folders)
